src/main/java/com/github/gomelon/ideakit/antlr/MetaParser.g4
parser grammar MetaParser;

options {
    tokenVocab = MetaLexer;
}

root:
    singleLine
    | multipleLine
    EOF;

singleLine:
    LINE_COMMENT meta;
multipleLine:
    BLOCK_COMMENT_START meta BLOCK_COMMENT_END ;

meta:
    metaQualifyName metaBody?;

metaQualifyName:
    META_QUALIFY_NAME;

metaBody:
    fieldExpr+;
fieldExpr:
    fieldNameValueExpr
    |fieldNameExpr;
fieldNameValueExpr:
    fieldName ASSIGNMENT valueExpr;
fieldName:
    IDENT;
valueExpr:
    boolValue
    | numValue
    | strValue;
boolValue:
    BOOLEAN;
strValue:
    STRING;
numValue:
    FLOAT|INTEGER;
fieldNameExpr:
    fieldName;
